--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,31 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.senla_tz" >
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.senla_tz">
 
+    <!--
+         The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
+         Google Maps Android API v2, but you must specify either coarse or fine
+         location permissions for the "MyLocation" functionality.
+    -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"
+        tools:ignore="CoarseFineLocation" />
 
     <application
+        android:name=".app.App"
         android:allowBackup="true"
         android:icon="@drawable/planet"
         android:label="@string/app_name"
         android:roundIcon="@drawable/anim_planet"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Senla_TZ" >
+        android:theme="@style/Theme.Senla_TZ">
+
+        <!--
+             The API key for Google Maps-based APIs is defined as a string resource.
+             (See the file "res/values/google_maps_api.xml").
+             Note that the API key is linked to the encryption key used to sign the APK.
+             You need a different API key for each encryption key, including the release key that is used to
+             sign the APK for publishing.
+             You can define the keys for the debug and release targets in src/debug/ and src/release/.
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
+
         <activity
-            android:name=".ui.activity.auth.AuthActivity"/>
+            android:name=".ui.activity.run.RunActivity"
+            android:exported="false"
+            android:screenOrientation="fullSensor" />
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
+        <activity android:name=".ui.activity.auth.AuthActivity"
+            android:screenOrientation="fullSensor"/>
         <activity
             android:name=".ui.activity.splash.SplashActivity"
-            android:theme="@style/Theme.Senla_TZ.Splash"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="fullSensor"
+            android:theme="@style/Theme.Senla_TZ.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.activity.main.MainActivity"/>
+        <activity android:name=".ui.activity.main.MainActivity"
+            android:screenOrientation="fullSensor"/>
+
+        <service
+            android:name=".service.ReminderNotificationService"
+            android:enabled="true"
+            android:exported="false" />
     </application>
 
 </manifest>
