--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,7 +53,9 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
     testImplementation 'junit:junit:4.+'
+    implementation "androidx.startup:startup-runtime:1.1.0"
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
@@ -68,13 +70,15 @@ dependencies {
     //hilt
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
+    implementation "androidx.hilt:hilt-work:1.0.0"
+    kapt 'androidx.hilt:hilt-compiler:1.0.0'
 
     //room
     def room_version = "2.3.0"
 
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
-    implementation 'androidx.room:room-coroutines:2.1.0-alpha04'
+    implementation "androidx.room:room-ktx:$room_version"
 
     //fragment
     def fragment_version = "1.3.4"
@@ -85,6 +89,9 @@ dependencies {
 
     //gson
     implementation 'com.google.code.gson:gson:2.8.6'
+
+    //workManager
+    implementation "android.arch.work:work-runtime-ktx:1.0.1"
 
     //retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
