--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,7 +75,7 @@ dependencies {
     kapt 'androidx.hilt:hilt-compiler:1.0.0'
 
     //room
-    def room_version = "2.3.0"
+    def room_version = "2.4.0-alpha04"
 
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
